--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@grammyjs/conversations": "^1.0.2",
     "@grammyjs/storage-free": "^2.0.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
