--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Telegram bot for tracking schedule",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon index.ts",
+    "dev": "nodemon",
     "start": "node dist",
     "build": "tsc"
   },
