--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "glob": "^8.0.3",
-    "grammy": "^1.10.1"
+    "grammy": "^1.10.1",
+    "typegram": "^3.10.0"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
