--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
-    "@types/node": "^18.7.3"
+    "@types/node": "^18.7.3",
+    "typescript": "^4.7.4"
   }
 }
