--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@grammyjs/conversations": "^1.0.2",
     "@grammyjs/storage-free": "^2.0.0",
+    "@grammyjs/storage-redis": "^2.0.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "glob": "^8.0.3",
     "grammy": "^1.10.1",
+    "ioredis": "^5.2.2",
     "typegram": "^3.10.0"
   },
   "devDependencies": {
