--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "glob": "^8.0.3",
     "grammy": "^1.10.1",
     "ioredis": "^5.2.2",
+    "node-cron": "^3.0.2",
     "typegram": "^3.10.0"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
     "@types/node": "^18.7.3",
+    "@types/node-cron": "^3.0.2",
     "typescript": "^4.7.4"
   }
 }
