--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "license": "MIT",
   "dependencies": {
     "@grammyjs/conversations": "^1.0.2",
-    "@grammyjs/storage-free": "^2.0.0",
     "@grammyjs/storage-redis": "^2.0.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
@@ -27,6 +26,8 @@
     "@types/glob": "^7.2.0",
     "@types/node": "^18.7.3",
     "@types/node-cron": "^3.0.2",
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
