--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
   "license": "MIT",
   "dependencies": {
     "@grammyjs/conversations": "^1.0.2",
+    "@grammyjs/storage-mongodb": "^2.0.0",
     "@grammyjs/storage-redis": "^2.0.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "glob": "^8.0.3",
     "grammy": "^1.10.1",
     "ioredis": "^5.2.2",
+    "luxon": "^3.0.3",
+    "mongoose": "^6.6.0",
     "node-cron": "^3.0.2",
     "typegram": "^3.10.0"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
+    "@types/luxon": "^3.0.1",
     "@types/node": "^18.7.3",
     "@types/node-cron": "^3.0.2",
     "nodemon": "^2.0.19",
